corrected extra gap under header

--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,6 +1,6 @@
 .desktop {
     ion-router-outlet {
-        margin-top: 10px;
+        margin-top: 60px;
         margin-bottom: 0px;
     }
 
